--- a/server/.env.example
+++ b/server/.env.example
@@ -10,6 +10,7 @@ PORT=3000
 NODE_ENV=development
 
 # CORS Configuration
-CORS_ORIGIN=*
-# For production, specify allowed origins:
-# CORS_ORIGIN=https://your-frontend-domain.com
+# Comma-separated list of allowed origins (for production use your Vercel URLs)
+CORS_ORIGIN=https://frotend-vscode-extension.vercel.app,https://frotend-vscode-extension-p02mo2u2y-dhanush-hs-projects.vercel.app,http://localhost:3001
+# For development, use * to allow all origins:
+# CORS_ORIGIN=*
